<resources>
    <string name="app_name">Chatting app</string>
    <string name="str_top_sign_up">Don\'t have an account?</string>
    <string name="bt_str_sign_in">SING IN</string>
    <string name="str_username">Username</string>
    <string name="str_fullname">Fullname</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_new_password">Password</string>
    <string name="str_sign_up">SIGN UP NOW</string>
    <string name="str_terms_conditions">Terms and Conditions</string>
    <string name="title_activity_sign_up">activity_sign_up</string>
    <string name="title_sign_up">SIGN UP</string>
    <string name="bt_str_create">Create</string>
    <string name="str_repeat_password">Repeat Password</string>
    <string name="bt_str_start">Start Chatting App</string>
    <string name="str_welcome">Welcome to Chatting App</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="str_profile_username">Username</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="Logout">Logout</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


    <string-array name="all_chat">
        <item>Lymeng</item>
        <item>Sambath</item>
        <item>MengLeang</item>
        <item>Vichika</item>
        <item>Sokhorn</item>
        <item>MengLeang</item>
        <item>Vichika</item>
        <item>Sokhorn</item>
        <item>MengLeang</item>
        <item>Vichika</item>
        <item>Sokhorn</item>
        <item>MengLeang</item>
        <item>Vichika</item>
        <item>Sokhorn</item>
        <item>MengLeang</item>
        <item>Vichika</item>
        <item>Sokhorn</item>
        <item>Lymeng</item>
        <item>Sambath</item>
        <item>MengLeang</item>
        <item>Vichika</item>
        <item>Sokhorn</item>
        <item>MengLeang</item>
        <item>Vichika</item>
        <item>Sokhorn</item>
        <item>MengLeang</item>
        <item>Vichika</item>
        <item>Sokhorn</item>
        <item>MengLeang</item>
        <item>Vichika</item>
        <item>Sokhorn</item>
        <item>MengLeang</item>
        <item>Vichika</item>
        <item>Sokhorn</item>

    </string-array>

    <string-array name="description">
        <item>hi</item>
        <item>Hello😂</item>
        <item>kal na nh mean sneha😂</item>
        <item>merl srey sart ot😂</item>
        <item>nh nv single sl nh ot😂</item>
        <item>Hello😂</item>
        <item>kal na nh mean sneha😂</item>
        <item>merl srey sart ot😂</item>
        <item>nh nv single sl nh ot😂</item>
        <item>merl srey sart ot😂</item>
        <item>nh nv single sl nh ot😂</item>
        <item>hi</item>
        <item>Hello😂</item>
        <item>kal na nh mean sneha😂</item>
        <item>merl srey sart ot😂</item>
        <item>nh nv single sl nh ot😂</item>
        <item>Hello😂</item>
        <item>kal na nh mean sneha😂</item>
        <item>merl srey sart ot😂</item>
        <item>nh nv single sl nh ot😂</item>
        <item>merl srey sart ot😂</item>
        <item>nh nv single sl nh ot😂</item>
    </string-array>
    <string name="title_activity_forget_password">activity_forget_password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>